--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Portfolio</title>
-    <meta name="description" content="Portfolio Template for Developer" />
+    <title>Mạnh Hiếu Portfolio</title>
+    <meta name="description" content="Mạnh Hiếu Portfolio - Senior Unity Developer" />
 
     <link rel="stylesheet" href="css/style.css" />
 
